# Mandelbrot

./: .gitignore  CMakeLists.txt  CURSOR_CROSS.h  FractalFrame.cpp  FractalFrame.cpp.save-failed  FractalFrame.h  FractalPanel.cpp  HDPrintscreenDialog.h  HDPrintscreenThread.cpp  HDPrintscreenThread.h  InfoPanel.cpp  Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.h.save-failed  Mandelbrot_04_v00.cbp  Mandelbrot_04_v00.depend  Mandelbrot_04_v00.layout  README.md  SettingsDialog.h  gmon.out  linux.makefile  makefile  makefile_linux  mandelbrot  menuicons.h  myEvents.cpp  myEvents.h
.github/workflows/: compile.yml  linux-i686.yml  linux-x86_64.yml  ubuntu-gnu.yml  win-mingw64-x86_64.yml
Printscreens/: Image_0000.png.txt  Image_0000_log.txt  Image_0001.png.txt  Image_0001_log.txt  Image_0002_log.txt  Image_0003_log.txt  Image_0004_log.txt  Image_0005_log.txt  Image_0006_log.txt  Image_0007_log.txt  Image_0008_log.txt  Image_0009_log.txt  Image_0010_log.txt  Image_0011_log.txt  Image_0012_log.txt  Image_0013.png.txt  Image_0014_log.txt  Image_0015_log.txt  Image_0016_log.txt  Image_0017_log.txt  Image_0018_log.txt  Image_0019_log.txt  Image_0020_log.txt  Image_0021_log.txt  Image_0022_log.txt  Image_0023.png.txt  Image_0024.png.txt  Image_0025.png.txt  Image_0026.png.txt  Image_0027.png.txt  goodplaces.txt
arc/: CURSOR_CROSS-create.h  HDPrintscreenDialog.cpp  ProgressDialog.cpp  ProgressDialog.h  SettingsDialog.cpp  wxMandelbrot.cpp  wxMandelbrot.h
include/: CURSOR_CROSS.h  FractalBitmap.h  FractalFrame.h  FractalPanel.h  HDPrintscreenDialog.h  InfoPanel.h  Job.h  Mandelbrot.h  Worker.h  myConversions.h
src/: CMakeLists.txt  FractalApp.cpp  FractalBitmap.cpp  FractalFrame.cpp  FractalPanel.cpp  HDPrintscreenDialog.cpp  InfoPanel.cpp  Mandelbrot.cpp  Mandelbrot_UpdateMath.cpp  Mandelbrot_UpdateMath.cu  Worker.cpp  main.cpp
tst/: makefile  mb01.cpp  test.sh
